--- a/firstProject/css/style.scss
+++ b/firstProject/css/style.scss
@@ -760,8 +760,6 @@ purple {
 
     &-menu {
       list-style: none;
-      margin-top: 5px;
-      padding: 5px;
       position: absolute;
       left: 50%;
       transform: translateX(-50%);
@@ -782,6 +780,8 @@ purple {
         border: 2px solid rgb(108, 95, 188);
         font-size: 19px;
         width: 100%;
+        margin-top: 5px;
+        padding: 5px;
         opacity: 1;
 
         & li {
@@ -874,7 +874,7 @@ purple {
   position: relative;
   background-color: rgba(251, 173, 24, 1);
   height: 10px;
-  width: 245px;
+  width: 100%;
   border-radius: 78.53px;
 }
 
@@ -1240,9 +1240,6 @@ purple {
   }
 
   .mobile {
-    &__inner {
-    }
-
     &__left {
       & img {
         width: 280px;
@@ -1278,6 +1275,24 @@ purple {
   }
 
   .purchase {
+    &__inner {
+      flex-direction: column;
+      gap: 60px;
+      align-items: center;
+    }
+    &__left {
+      &-item {
+        margin-left: 50px;
+      }
+      &-text {
+        font-size: 40px;
+        line-height: 40px;
+      }
+    }
+    &__right {
+      width: 400px;
+      border: 1px solid rgb(205, 210, 214);
+    }
   }
 }
 
@@ -1393,6 +1408,39 @@ purple {
   .dishes {
     &__main {
       justify-content: space-around;
+    }
+  }
+  .purchase {
+    &__item {
+      &-wrapper {
+        & img {
+          width: 0;
+        }
+      }
+
+      &-title {
+        font-weight: 500;
+      }
+
+      &-information {
+        flex-direction: column;
+      }
+    }
+
+    &__left {
+      &-item {
+        margin: 0 40px;
+      }
+    }
+
+    &__right {
+      width: 200px;
+
+      &-header {
+        flex-direction: column;
+        gap: 10px;
+        align-items: center;
+      }
     }
   }
 }
