--- a/firstProject/css/signup/signup.scss
+++ b/firstProject/css/signup/signup.scss
@@ -209,6 +209,7 @@ purple {
 
   &__inner {
     display: flex;
+    justify-content: center;
   }
 }
 
@@ -364,12 +365,12 @@ purple {
     position: relative;
     width: 550px;
     height: 600px;
-    margin-left: 220px;
+    margin-left: 180px;
   }
 
   &__card {
     margin-top: 30px;
-    margin-left: 150px;
+    margin-left: 100px;
     z-index: 1;
   }
 
@@ -431,4 +432,35 @@ purple {
 
 .hide {
   display: none;
+}
+
+@media (max-width: 1450px) {
+  .login {
+  }
+  .left {
+    padding: 150px 180px 0 180px;
+  }
+  .right {
+    &__images {
+      margin-left: 120px;
+    }
+    &__text {
+      &-subtitle {
+        padding: 0 120px;
+      }
+    }
+    &__card {
+      margin-left: 50px;
+    }
+  }
+}
+@media (max-width: 1250px) {
+}
+@media (max-width: 1100px) {
+}
+@media (max-width: 900px) {
+}
+@media (max-width: 700px) {
+}
+@media (max-width: 500px) {
 }
