--- a/firstProject/css/blog/blog.scss
+++ b/firstProject/css/blog/blog.scss
@@ -179,7 +179,6 @@ purple {
     align-items: center;
     margin-right: auto;
     margin-left: 105px;
-    margin-right: 445px;
 
     &-buttons {
       display: flex;
@@ -219,6 +218,40 @@ purple {
   &__registration {
     &-link {
       text-decoration: none;
+    }
+  }
+  &__burger {
+    display: none;
+    position: relative;
+    width: 30px;
+    height: 30px;
+    background-color: transparent;
+    border-radius: 0;
+    & span {
+      position: absolute;
+      width: 30px;
+      height: 3px;
+      background-color: rgba(40, 40, 40, 1);
+      left: 0px;
+      transition: transform 0.5s, opacity 0.5s, background-color 0.5s;
+      &:nth-child(1) {
+        transform: translateY(-10px);
+      }
+      &:nth-child(3) {
+        transform: translateY(10px);
+      }
+    }
+  }
+  &.open &__burger span {
+    background-color: rgb(108, 95, 188);
+    &:nth-child(1) {
+      transform: translateY(0) rotate(45deg);
+    }
+    &:nth-child(2) {
+      opacity: 0;
+    }
+    &:nth-child(3) {
+      transform: translateY(0) rotate(-45deg);
     }
   }
 }
@@ -394,9 +427,6 @@ purple {
 
 .questions {
   margin-top: 130px;
-
-  &__wrapper {
-  }
 
   &__title {
     text-align: center;
@@ -593,8 +623,6 @@ purple {
       &-date {
         align-self: center;
       }
-      &-information {
-      }
     }
     &__bottom {
       padding-top: 0;
@@ -617,6 +645,21 @@ purple {
     }
   }
 }
+
+@media (max-width: 800px) {
+  .header {
+    &__navigation {
+      margin-left: auto;
+      &-buttons {
+        gap: 15px;
+      }
+    }
+    &-button {
+      width: 93px;
+    }
+  }
+}
+
 @media (max-width: 700px) {
   .subscribe {
     &__content {
@@ -625,6 +668,50 @@ purple {
       &-img {
         display: none;
       }
+    }
+  }
+}
+
+@media (max-width: 600px) {
+  .header {
+    &__inner {
+      padding: 0 20px;
+    }
+    &__navigation {
+      position: absolute;
+      right: 0;
+      top: 0;
+      width: 200px;
+      transition: transform 0.5s;
+      &-buttons {
+        flex-direction: column;
+        gap: 50px;
+
+        text-align: center;
+        padding: 150px 50px;
+        font-size: 26px;
+        background-color: rgb(243, 243, 243);
+        border: 1px solid;
+        transform: translateX(100%);
+      }
+    }
+    &__registration {
+      position: absolute;
+      right: 0;
+      top: 450px;
+      transform: translateX(100%);
+      transition: transform 0.5s;
+      gap: 5px;
+    }
+    &__burger {
+      display: block;
+    }
+
+    &.open &__navigation {
+      transform: translateX(-100%);
+    }
+    &.open &__registration {
+      transform: translateX(0%);
     }
   }
 }
