--- a/firstProject/css/style.css
+++ b/firstProject/css/style.css
@@ -260,6 +260,51 @@ purple {
 .header__registration-link {
   text-decoration: none;
 }
+.header__burger {
+  display: none;
+  position: relative;
+  width: 30px;
+  height: 30px;
+  background-color: transparent;
+  border-radius: 0;
+}
+.header__burger span {
+  position: absolute;
+  width: 30px;
+  height: 3px;
+  background-color: rgb(40, 40, 40);
+  left: 0px;
+  -webkit-transition: opacity 0.5s, background-color 0.5s, -webkit-transform 0.5s;
+  transition: opacity 0.5s, background-color 0.5s, -webkit-transform 0.5s;
+  transition: transform 0.5s, opacity 0.5s, background-color 0.5s;
+  transition: transform 0.5s, opacity 0.5s, background-color 0.5s, -webkit-transform 0.5s;
+}
+.header__burger span:nth-child(1) {
+  -webkit-transform: translateY(-10px);
+      -ms-transform: translateY(-10px);
+          transform: translateY(-10px);
+}
+.header__burger span:nth-child(3) {
+  -webkit-transform: translateY(10px);
+      -ms-transform: translateY(10px);
+          transform: translateY(10px);
+}
+.header.open .header__burger span {
+  background-color: rgb(108, 95, 188);
+}
+.header.open .header__burger span:nth-child(1) {
+  -webkit-transform: translateY(0) rotate(45deg);
+      -ms-transform: translateY(0) rotate(45deg);
+          transform: translateY(0) rotate(45deg);
+}
+.header.open .header__burger span:nth-child(2) {
+  opacity: 0;
+}
+.header.open .header__burger span:nth-child(3) {
+  -webkit-transform: translateY(0) rotate(-45deg);
+      -ms-transform: translateY(0) rotate(-45deg);
+          transform: translateY(0) rotate(-45deg);
+}
 
 .application {
   padding-top: 100px;
@@ -1336,6 +1381,15 @@ purple {
   }
 }
 @media (max-width: 800px) {
+  .header__navigation {
+    margin-left: auto;
+  }
+  .header__navigation-buttons {
+    gap: 15px;
+  }
+  .header-button {
+    width: 93px;
+  }
   .subscribe__content-img {
     width: 25%;
     top: 120px;
@@ -1392,6 +1446,62 @@ purple {
   }
   .subscribe__content-img {
     display: none;
+  }
+}
+@media (max-width: 600px) {
+  .header__inner {
+    padding: 0 20px;
+  }
+  .header__navigation {
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 200px;
+    -webkit-transition: -webkit-transform 0.5s;
+    transition: -webkit-transform 0.5s;
+    transition: transform 0.5s;
+    transition: transform 0.5s, -webkit-transform 0.5s;
+  }
+  .header__navigation-buttons {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 50px;
+    text-align: center;
+    padding: 150px 50px;
+    font-size: 26px;
+    background-color: rgb(243, 243, 243);
+    border: 1px solid;
+    -webkit-transform: translateX(100%);
+        -ms-transform: translateX(100%);
+            transform: translateX(100%);
+  }
+  .header__registration {
+    position: absolute;
+    right: 0;
+    top: 450px;
+    -webkit-transform: translateX(100%);
+        -ms-transform: translateX(100%);
+            transform: translateX(100%);
+    -webkit-transition: -webkit-transform 0.5s;
+    transition: -webkit-transform 0.5s;
+    transition: transform 0.5s;
+    transition: transform 0.5s, -webkit-transform 0.5s;
+    gap: 5px;
+  }
+  .header__burger {
+    display: block;
+  }
+  .header.open .header__navigation {
+    -webkit-transform: translateX(-100%);
+        -ms-transform: translateX(-100%);
+            transform: translateX(-100%);
+  }
+  .header.open .header__registration {
+    -webkit-transform: translateX(0%);
+        -ms-transform: translateX(0%);
+            transform: translateX(0%);
   }
 }
 @media (max-width: 500px) {
