--- a/firstProject/css/style.scss
+++ b/firstProject/css/style.scss
@@ -1150,7 +1150,7 @@ purple {
 
 @media (max-width: 1450px) {
   .application__right-card {
-    right: -100px;
+    left: 0px;
   }
 }
 
@@ -1205,7 +1205,6 @@ purple {
   .customer {
     &__content {
       &-list {
-        overflow: scroll;
       }
     }
   }
@@ -1215,7 +1214,6 @@ purple {
   }
   .slider {
     &__form {
-      display: none;
     }
   }
 
@@ -1378,6 +1376,18 @@ purple {
       }
     }
   }
+  .customer {
+    &__content {
+      &-list {
+        overflow: scroll;
+      }
+    }
+  }
+  .slider {
+    &__form {
+      display: none;
+    }
+  }
 }
 
 @media (max-width: 700px) {
@@ -1425,7 +1435,7 @@ purple {
         line-height: 40px;
       }
       &-list {
-        font-size: 13px;
+        font-size: 16px;
         gap: 10px;
       }
       &-more {
@@ -1456,6 +1466,7 @@ purple {
       top: 0;
       width: 200px;
       transition: transform 0.5s;
+      transform: translateX(100%);
       &-buttons {
         flex-direction: column;
         gap: 50px;
@@ -1465,7 +1476,6 @@ purple {
         font-size: 26px;
         background-color: rgb(243, 243, 243);
         border: 1px solid;
-        transform: translateX(100%);
       }
     }
     &__registration {
@@ -1481,10 +1491,10 @@ purple {
     }
 
     &.open &__navigation {
-      transform: translateX(-100%);
+      transform: translateX(0);
     }
     &.open &__registration {
-      transform: translateX(0%);
+      transform: translateX(0);
     }
   }
 }
@@ -1589,7 +1599,7 @@ purple {
   .subscribe {
     &__content {
       &-text {
-        font-size: 40px;
+        font-size: 38px;
       }
     }
     &__input {
