--- a/firstProject/css/blog/blog.css
+++ b/firstProject/css/blog/blog.css
@@ -693,6 +693,9 @@ purple {
     transition: -webkit-transform 0.5s;
     transition: transform 0.5s;
     transition: transform 0.5s, -webkit-transform 0.5s;
+    -webkit-transform: translateX(100%);
+        -ms-transform: translateX(100%);
+            transform: translateX(100%);
   }
   .header__navigation-buttons {
     -webkit-box-orient: vertical;
@@ -705,9 +708,6 @@ purple {
     font-size: 26px;
     background-color: rgb(243, 243, 243);
     border: 1px solid;
-    -webkit-transform: translateX(100%);
-        -ms-transform: translateX(100%);
-            transform: translateX(100%);
   }
   .header__registration {
     position: absolute;
@@ -726,14 +726,14 @@ purple {
     display: block;
   }
   .header.open .header__navigation {
-    -webkit-transform: translateX(-100%);
-        -ms-transform: translateX(-100%);
-            transform: translateX(-100%);
+    -webkit-transform: translateX(0);
+        -ms-transform: translateX(0);
+            transform: translateX(0);
   }
   .header.open .header__registration {
-    -webkit-transform: translateX(0%);
-        -ms-transform: translateX(0%);
-            transform: translateX(0%);
+    -webkit-transform: translateX(0);
+        -ms-transform: translateX(0);
+            transform: translateX(0);
   }
 }
 @media (max-width: 600px) {
