--- a/firstProject/css/menu/menu.scss
+++ b/firstProject/css/menu/menu.scss
@@ -943,6 +943,7 @@ purple {
       top: 0;
       width: 200px;
       transition: transform 0.5s;
+      transform: translateX(100%);
       &-buttons {
         flex-direction: column;
         gap: 50px;
@@ -952,7 +953,6 @@ purple {
         font-size: 26px;
         background-color: rgb(243, 243, 243);
         border: 1px solid;
-        transform: translateX(100%);
       }
     }
     &__registration {
@@ -968,10 +968,10 @@ purple {
     }
 
     &.open &__navigation {
-      transform: translateX(-100%);
+      transform: translateX(0);
     }
     &.open &__registration {
-      transform: translateX(0%);
+      transform: translateX(0);
     }
   }
 }
@@ -994,6 +994,18 @@ purple {
 
     &__title {
       line-height: 37px;
+    }
+  }
+  .weekend {
+    &__inner {
+      align-items: normal;
+    }
+    &__price {
+      &-options {
+        & li {
+          padding: 0 10px;
+        }
+      }
     }
   }
 }
